--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,7 +16,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "fastify": "^4.24.3",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.2"
   }
 }
