--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^9.0.8",
     "fastify": "^4.24.3",
     "node-cron": "^3.0.3",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
