--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           docker build -t $PROJECT --build-arg PROJECT=server .
           docker tag $PROJECT:latest $DOCKER_REPO:latest
-          docker login -u $DOCKER_USERNAME -p ${{secrets.DOCKER_TOEKEN}}
+          docker login -u $DOCKER_USERNAME -p ${{secrets.DOCKER_TOKEN}}
           docker push $DOCKER_REPO:latest
       - name: SSH into EC2 instance and deploy
         uses: appleboy/ssh-action@master
