--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,19 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16"
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Build and push Docker image
-        run: |
-          docker build -t $PROJECT --build-arg PROJECT=server .
-          docker tag $PROJECT:latest $DOCKER_REPO:latest
-          echo "${{ secrets.EC2_HOST }}"
-          docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
-          docker push $DOCKER_REPO:latest
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: brunoroh/bolhadev-chat:latest
+
       - name: SSH into EC2 instance and deploy
         uses: appleboy/ssh-action@master
         with:
