--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,24 +8,25 @@ env:
   PROJECT: "bolhadev-chat"
   DOCKER_REPO: "brunoroh/bolhadev-chat"
   DOCKER_USERNAME: "brunoroh"
+  DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "16"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: $DOCKER_USERNAME
+          password: $DOCKER_TOKEN
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
