--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ env:
   PROJECT: "bolhadev-chat"
   DOCKER_REPO: "brunoroh/bolhadev-chat"
   DOCKER_USERNAME: "brunoroh"
-  DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
 jobs:
   deploy:
@@ -25,8 +24,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
