--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: Production
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,8 +27,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.$DOCKER_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
