--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.MY_EC2_SSH_KEY }}
           script: |
-            sudo docker pull ${{ env.DOCKER_REPO }}:latest
-            sudo docker stop my-node-app || true
-            sudo docker rm my-node-app || true
-            sudo docker run -d -p 3000:3000 --name my-node-app ${{ env.DOCKER_REPO }}:latest
+            sudo docker pull ${{ vars.DOCKER_REPO }}:latest
+            sudo docker stop ${{ vars.PROJECT}} || true
+            sudo docker rm ${{ vars.PROJECT}} || true
+            sudo docker run -d -p 3000:3000 --name ${{ vars.PROJECT}} ${{ vars.DOCKER_REPO }}:latest
