--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
     "fastify": "^4.24.3",
     "node-cron": "^3.0.3",
     "socket.io": "^4.7.2",
