--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-websocket": "^4.8.1",
     "simple-peer": "^9.11.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
