--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
             sudo docker stop bolhadev-chat || true
             sudo docker rm bolhadev-nginx || true
             sudo docker rm bolhadev-chat || true
-            sudo docker run -d -p 4000:4000 -p 4001:4001 --name bolhadev-chat ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
-            sudo docker run -d -p 80:80 --name bolhadev-nginx ${{ vars.DOCKER_REPO }}/bolhadev-nginx:latest
+            sudo docker run -d -p 4000:4000 -p 4001:4001 --name bolhadev-chat --network internal ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
+            sudo docker run -d -p 80:80 --name bolhadev-nginx --network internal ${{ vars.DOCKER_REPO }}/bolhadev-nginx:latest
