--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -27,6 +27,8 @@ http {
 
     server {
         listen 80;
+        server_name api.bolhadev.chat;
+        root /public;
 
         location / {
             proxy_pass http://nodejs_api;
