chore(nginx): add config to certbot

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
             sudo docker rm bolhadev-nginx || true
             sudo docker rm bolhadev-chat || true
             sudo docker run -d -p 4000:4000 -p 4001:4001 --name bolhadev-chat --network internal ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
-            sudo docker run -d -p 80:80 --name bolhadev-nginx -v /var/www/api:/public -v /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem -v /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem --network internal ${{ vars.DOCKER_REPO }}/bolhadev-nginx:latest
+            sudo docker run -d -p 80:80 --name bolhadev-nginx -v /var/www/certbot:/var/www/certbot -v /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem -v /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem --network internal ${{ vars.DOCKER_REPO }}/bolhadev-nginx:latest
