--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,6 +17,10 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     upstream nodejs_api {
         server bolhadev-chat:4000;
     }
