chore(actions): add prune command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            sudo docker image 
+            sudo docker image prune
             sudo docker pull ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
             sudo docker pull ${{ vars.DOCKER_REPO }}/bolhadev-nginx:latest
             sudo docker stop bolhadev-nginx || true
