--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -27,8 +27,13 @@ http {
     }
 
     server {
-        listen 80;
+        listen [::]:443 ssl;
+        listen 443 ssl; 
+
         server_name api.bolhadev.chat;
+
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
