--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -29,6 +29,7 @@ http {
     server {
         listen [::]:443 ssl;
         listen 443 ssl; 
+        listen 80; 
 
         server_name api.bolhadev.chat;
 
