--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "next lint",
+    "format": "prettier --write \"app/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.0.0",
@@ -14,6 +15,7 @@
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geist": "^1.3.0",
     "lucide-react": "^0.378.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
