--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "eslint-config-next": "^14.2.3",
     "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "turbo": "latest"
   },
   "packageManager": "pnpm@9.1.1",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "eslint-plugin-tailwindcss": "^3.15.2"
   }
 }
