--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "google": "link:@next/third-parties/google",
     "lucide-react": "^0.378.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
