--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write \"app/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.3",
     "@radix-ui/react-select": "^2.0.0",
     "@types/simple-peer": "^9.11.8",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
-    "google": "link:@next/third-parties/google",
     "lucide-react": "^0.378.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
