--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.2.3",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@supabase/ssr": "^0.3.0",
     "@types/simple-peer": "^9.11.8",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
