--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "update-types": "npx supabase gen types typescript --project-id pbrphwwgeayvhkeizpgm > apps/web/lib/supabase/types.ts"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
@@ -20,6 +21,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "eslint-plugin-tailwindcss": "^3.15.2"
+    "eslint-plugin-tailwindcss": "^3.15.2",
+    "supabase": "^1.167.4"
   }
 }
