--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy to EC2
+
 on:
   push:
     branches:
@@ -39,7 +40,7 @@ jobs:
             sudo docker stop bolhadev-chat || true
             sudo docker rm bolhadev-nginx || true
             sudo docker rm bolhadev-chat || true
-            sudo docker run -d -p 4000:4000 -p 4001:4001 --name bolhadev-chat --restart unless-stopped --network internal ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
+            sudo docker run -d -p "127.0.0.1:4000:4000" -p "127.0.0.1:4001:4001" --name bolhadev-chat --restart unless-stopped --network internal ${{ vars.DOCKER_REPO }}/bolhadev-chat:latest
             sudo docker run -d -p 80:80 -p 443:443 \
             --name bolhadev-nginx \
             -v /var/www/certbot:/var/www/certbot \
