feat(web): change the location where picked up the env

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "env:load": "dotenv -e ../../.env --",
+    "dev": "pnpm env:load next dev",
+    "build": "pnpm env:load next build",
+    "start": "pnpm env:load next start",
     "lint": "next lint",
     "format": "prettier --write \"app/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
@@ -13,6 +14,7 @@
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@repo/env-config": "workspace:*",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@types/simple-peer": "^9.11.8",
@@ -42,6 +44,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.53.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "postcss": "^8.4.32",
