--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@repo/eslint-config": "workspace:*",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "eslint-config-next": "^14.2.3",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
