--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write \"app/**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "lint": "next lint && lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx, jsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,md,html,js,jsx,ts,tsx}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@next/third-parties": "^14.2.3",
