--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "update-types": "npx supabase gen types typescript --project-id pbrphwwgeayvhkeizpgm > apps/web/lib/supabase/types.ts"
+    "update-types": "npx supabase gen types typescript --project-id pbrphwwgeayvhkeizpgm > apps/web/lib/supabase/types.ts",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@repo/eslint-config": "workspace:*",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "eslint-config-next": "^14.2.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "turbo": "latest"
