--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,11 @@
   "globalDependencies": [
     "**/.env.*local"
   ],
+  "globalEnv": [
+    "NEXT_PUBLIC_SOCKET_URL",
+    "NEXT_PUBLIC_SUPABASE_URL",
+    "NEXT_PUBLIC_SUPABASE_KEY"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": [
