chore(@repo/env-config): add build script

--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/env-config",
   "version": "0.0.0",
   "private": true,
-  "main": "index.ts",
+  "main": "index.js",
   "types": "index.ts",
   "scripts": {
     "build": "tsc index.ts"
