--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@repo/env-config": "workspace:^",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
