--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   bolhadev-chat:
@@ -12,7 +12,7 @@ services:
     build: ./docker/nginx/
     image: brunoroh/bolhadev-nginx:latest
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     depends_on:
       - bolhadev-chat
