--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/env-config",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
     "build": "tsc"
