--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/eslintrc",
   "root": true,
-  "extends": ["next/core-web-vitals", "turbo", "prettier"],
+  "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off"
   },
