--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,8 +21,9 @@
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@repo/env-config": "workspace:*",
     "@radix-ui/react-slot": "^1.0.2",
+    "@repo/env-config": "workspace:*",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@types/simple-peer": "^9.11.8",
@@ -46,12 +47,12 @@
     "@next/eslint-plugin-next": "^14.2.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "dotenv-cli": "^7.4.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "postcss": "^8.4.38",
