feat(web): add Separator component from shadcn/ui

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@repo/env-config": "workspace:*",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
