refactor: modernize ESLint and Next.js configuration
chore:
* Replace .eslintrc.json with ESLint flat config
* Update ESLint related dependencies and configuration
* Migrate to new Next.js version and configuration

feat:
* Add ESLint config for server app
* Add lint script for server
* Update nodemon config to use experimental types
* Add lint-staged and pre-commit hooks configuration

changes:
* Update server ESLint config to use flat configuration
* Add TypeScript ESLint parser and plugins
* Update dependencies to latest versions including Next.js
* Remove unused ESLint plugins and configs
* Make packages ESM compatible with type:module
* Add proper TypeScript types for React components
* Update tsconfig settings for better type checking

build:
* Require Node.js >=22
* Use modern ESLint and TypeScript configuration
* Update build scripts and configuration

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "npx eslint src/."
   },
   "keywords": [],
   "author": "",
