--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,16 +2,19 @@
   "name": "web",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "env:load": "dotenv -e ../../.env --",
-    "dev": "pnpm env:load next dev",
+    "dev": "pnpm env:load next dev --turbopack --port 3000",
     "build": "pnpm env:load next build",
     "start": "pnpm env:load next start",
-    "lint": "next lint && lint-staged"
+    "lint": "next lint --max-warnings 0",
+    "check-types": "tsc --noEmit",
+    "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "*.{js,ts,tsx, jsx}": [
-      "eslint --quiet --fix"
+      "npx eslint --quiet --fix"
     ],
     "*.{json,md,html,js,jsx,ts,tsx}": [
       "prettier --write"
@@ -22,8 +25,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
-    "@repo/env-config": "workspace:*",
     "@radix-ui/react-slot": "^1.0.2",
+    "@repo/env-config": "workspace:*",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@types/simple-peer": "^9.11.8",
@@ -32,7 +35,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.378.0",
-    "next": "^14.2.3",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use-websocket": "^4.8.1",
@@ -44,17 +47,13 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "dotenv-cli": "^7.4.2",
-    "@types/eslint": "^8.56.10",
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-only-warn": "^1.1.0",
+    "dotenv-cli": "^7.4.2",
     "postcss": "^8.4.38",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.3",
