--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.2",
+    "eslint": "^9.19.0",
     "postcss": "^8.4.38",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.3",
