--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -43,11 +43,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native/eslint-config": "^0.77.0",
+    "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
