--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SOCKET_URL=ws://localhost:4000
 NEXT_SUPABASE_URL=
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
 NEXT_SUPABASE_KEY=
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
