--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
+    "eslint": "^9.19.0",
     "fastify": "^4.27.0",
     "node-cron": "^3.0.3",
     "socket.io": "^4.7.5",
