--- a/.env.template
+++ b/.env.template
@@ -3,4 +3,9 @@ NEXT_SUPABASE_URL=
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
 NEXT_SUPABASE_KEY=
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
-POSTGRES_PASSWORD=
+
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
