--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,16 +11,19 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "npx eslint_d . --max-warnings 0",
-    "expo:lint": "expo lint "
+    "expo:lint": "expo lint ",
+    "graphql:codegen": "npx graphql-codegen --config codegen.ts "
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@clerk/clerk-expo": "^2.7.3",
     "@clerk/types": "^4.45.0",
     "@expo/vector-icons": "^14.0.2",
+    "@graphql-codegen/cli": "^5.0.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "class-variance-authority": "^0.7.0",
@@ -38,6 +41,7 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "graphql": "^16.10.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -55,6 +59,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@graphql-codegen/typescript": "^4.1.4",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@react-native/eslint-config": "^0.77.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
